$Id: ChangeLog,v 1.17 2007/02/11 10:39:42 tho Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/kl/cont/gb/html/makl.html

MaKL 1.4.0:
	- added script.mk template for installing/uninstalling scripts
	- added xeno.mk template for external packages handling aiming to provide
	  a more generic interface than party.mk (which is now deprecated)
	
MaKL 1.3.0:
	- added files.mk template for installing/uninstalling generic files
	- added MAKL_TC_DIR environment variable to override system-wide toolchain
	  settings
	- NO_<UPPERCASE'D-TARGET-NAME> variables for selectively disabling 
	  standard targets
	- users' hooks for all standard MaKL targets in prog, man, lib, deps, inc
	  templates
	- added subst.mk template for doing on-the fly sed(1) substitutions to
	  files
	- Linux mipsel toolchain added
	- shared libs support (Darwin, Linux, FreeBSD, NetBSD, OpenBSD)
	- added basic test/tutorial framework
	- added configure arguments to both header and Makefile output
	- VERSION file supports description
	- deps.mk: lex/yacc support
	- undefine conf.h variables to avoid redefinition
	- export output Makefile variables for recursive make calls
	- party.mk: fix logging output to absolute path
	- fixed ordering between -L and -l arguments for shared libraries
	- correct environment import for set operations

MaKL 1.2.1:
	- makl_file_sub() added
	- makl_tab_set() handles variable number of arguments
	- default optimization flags removed
	- explicit directory variables (DESTDIR, BINDIR, MANDIR, etc.) added to 
	  output config files 

MaKL 1.2.0:
	- QNX toolchains added (ARM, MIPS, PPC, SH)
	- VxWorks toolchains added (DCC compiler)
	- toolchain names changed to OS-CPU.tc
	- new make target: purge
	- party.mk: added decompression, download and integrity check targets, 
	  split steps more cleanly, state check
	- bug fix: strip LIB name before using it
	- makl_check_tools, makl_checktmzone, makl_checkinline, 
	  makl_checkextvar, makl_target_name added